Remove unused files and folders

--- a/notebooks/agent_work.ipynb
+++ b/notebooks/agent_work.ipynb
@@ -17,11 +17,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import getpass\n",
+    "import os\n",
+    "\n",
+    "if \"GOOGLE_API_KEY\" not in os.environ:\n",
+    "    os.environ[\"GOOGLE_API_KEY\"] = getpass.getpass(\"Enter your Google AI API key: \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Kiểm tra xem biến môi trường 'GOOGLE_API_KEY' đã được thiết lập hay chưa\n",
+    "if \"GOOGLE_API_KEY\" in os.environ:\n",
+    "    api_key = os.environ[\"GOOGLE_API_KEY\"]\n",
+    "    print(\"Google API Key đã được tải thành công:\")\n",
+    "    # print(api_key)  # Hoặc chỉ kiểm tra bằng cách in ra một phần\n",
+    "else:\n",
+    "    print(\"Google API Key chưa được thiết lập trong biến môi trường.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "\n",
     "def load_llms_model(model_name: str):\n",
     "    \"\"\"\n",
@@ -34,7 +65,14 @@
     "            max_tokens=1000,\n",
     "        )\n",
     "    elif \"gemini\" in model_name:\n",
-    "        pass\n",
+    "        return ChatGoogleGenerativeAI(\n",
+    "            model=model_name,\n",
+    "            temperature=0.1,\n",
+    "            # max_tokens=None,\n",
+    "            # timeout=None,\n",
+    "            # max_retries=2,\n",
+    "            # other params...\n",
+    "        )\n",
     "    else:\n",
     "        raise ValueError(\"Model not supported\")"
    ]
@@ -45,7 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = \"gpt-3.5-turbo\"\n",
+    "MODEL_NAME = \"gemini-1.5-pro\"\n",
+    "# MODEL_NAME = \"gpt-3.5-turbo\"\n",
     "\n",
     "llm = load_llms_model(MODEL_NAME)\n",
     "llm"
@@ -62,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +118,7 @@
     "    df=df,\n",
     "    llm=llm,\n",
     "    agent_type=\"tool-calling\",\n",
+    "    # agent_type = 'zero-shot-react-description',\n",
     "    allow_dangerous_code=True,\n",
     "    verbose=True,\n",
     "    return_intermediate_steps=True,\n",
@@ -87,11 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# agent"
+    "agent.ainvoke"
    ]
   },
   {
@@ -101,7 +141,8 @@
    "outputs": [],
    "source": [
     "question = \"What is the average score of the students?\"\n",
-    "response = agent(question)"
+    "response = agent(question)\n",
+    "# response = agent.invoke(question)"
    ]
   },
   {
@@ -110,7 +151,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response['intermediate_steps'][0][0].tool_input['query']"
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response['intermediate_steps'][0][0].tool_input"
    ]
   },
   {
@@ -138,7 +188,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response['intermediate_steps'][0][0].tool_input['query']"
+    "response['intermediate_steps'][0][0].tool_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response['intermediate_steps'][0][0].tool_input"
    ]
   },
   {
